	bcb5/testConfig/testConfig.bpr, bcb5/testConfig/testConfig.mak: Added
	testConfig.

	* bcb5/testCategory/testCategory.bpr, 
	bcb5/testFixedContextCategory/testFixedContextCategory.bpr,
	bcb5/testNDC/testNDC.bpr, bcb5/testPattern/testPattern.bpr
	bcb5/testPattern/testPattern.mak, bcb5/testmain/testmain.bpr: Adjusted
	makefiles/project files for BCB.

2002-01-21 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/Category.cpp: fix ownsAppender() methods.

	* tests/testCategory.cpp: rename appender 'default' to 'default2'.

	* configure.in: upped version to 0.2.7rc1 and LT_VERSION to 3:1:2

	* src/SimpleConfigurator.cpp, tests/testFixedContextCategory.cpp,
	tests/testPattern.cpp, tests/testbench.cpp, tests/testmain.cpp:
	replaced setAppender() with addAppender().

	* include/log4cpp/Category.hh: update doxygen comments.

	* include/log4cpp/FixedContextCategory.hh, 
	src/FixedContextCategory.cpp: sync methods for multiple Appender
	support.

	* NEWS: added summary for 0.2.7 release
	
2002-01-20 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/Category.hh, src/Category.cpp, 
	tests/testCategory.cpp: merged in support for multiple Appenders,
	contributed by Brendan B. Boerner.
	* THANKS: Added Brendan.

2002-01-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/HierarchyMaintainer.hh, src/HierarchyMaintainer.cpp:
	added getExistingInstance(std::string). 
	* include/log4cpp/Category.hh, src/Category.cpp: 
	added exists(std::string).

	* include/log4cpp/RollingFileAppender.hh,
	include/log4cpp/Makefile.am,
	src/RollingFileAppender.cpp, src/MakeFile.am: removed 
	RollingFileAppender, to be replaced with DailyRollingFileAppender.
	
2002-01-16 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/Category.hh, src/Category.cpp: fix bug #504314:
	added missing log methods for priority 'fatal'.

	* src/SimpleConfigurator.cpp: added 'stdout' and 'stderr' appenders.
	
2002-01-10 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>