@@ -6,7 +6,7 @@ AC_PREREQ(2.50)
 
 LOG4CPP_MAJOR_VERSION=0
 LOG4CPP_MINOR_VERSION=2
-LOG4CPP_MICRO_VERSION=7rc1
+LOG4CPP_MICRO_VERSION=7rc2
 
 PACKAGE=log4cpp
 VERSION=$LOG4CPP_MAJOR_VERSION.$LOG4CPP_MINOR_VERSION.$LOG4CPP_MICRO_VERSION
